# KChunker

./: .gitignore  KChunker.txt  PROJECT_OVERVIEW.md  README.md  gui  gui.py  implementation_plan.md  install.bat  install.sh  launch_gui.bat  launch_gui.command  launch_gui.sh  main.py  pyproject.toml
chunkers/: __init__.py  base.py  email_chunker.py  hierarchical.py  hybrid.py  semantic.py  table_aware.py
configs/: __init__.py  config.py
embeddings/: __init__.py  base.py  sentence_transformers.py
ocr/: __init__.py  base.py  layout_detection.py  paddle_ocr.py
parsers/: __init__.py  base.py  docx_parser.py  email_parser.py  excel_parser.py  ocr_parser.py  pdf_parser.py  router.py  txt_parser.py
plugin_system/: __init__.py  base.py  manager.py
tests/: test_chunkers.py  test_vector_db.py  test_workflow.py
utils/: __init__.py  logging.py
vector_db/: __init__.py  base.py  chroma_db.py  faiss_db.py
workflows/: manager.py
